[feat]: [CCM-11754]: Handled viewPreferences fields to update with default settings